# kristinaHan

./: LICENSE  asset-manifest.json  db.sqlite3  index.html  pyproject.toml  render.yaml  requirements.txt
back/: server.js
back_nodejs/: package-lock.json  package.json
front/: package-lock.json  package.json
front/src/: App.js  NewOrderForm.js  NewOrderFormLoaded.js  NewOrderFormMarried.js  NewOrderFormMarriedLoaded.js  OrderForm copy.js  OrderForm.js  OrderFormLoaded.js  OrderFormNew.js  OrderList.js  index.css
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0002_alter_order_balance_alter_order_depositjpy_and_more.py  0004_order_alterationmemo.py  0005_order_paymentmethodjpy_order_paymentmethodkrw_and_more.py  0006_order_is_deleted.py  0007_alter_order_paymentmethodjpy_and_more.py  0008_alter_order_paymentmethodjpy_and_more.py  0009_alter_order_deliverymethod_alter_order_dresstype_and_more.py  0010_order_spouseaffiliation_order_spousecontact_and_more.py  0011_remove_order_paymentmethodjpy_and_more.py  0012_alter_order_balance_alter_order_balancejpy_and_more.py  0013_alter_order_balance_alter_order_balancejpy_and_more.py  0014_neworder.py
server/: db.sqlite3  pyproject.toml  settings.py  urls.py  views.py
server/orders/: models.py  serializers.py  views.py
server/server/: settings.py
static/css/: main.209e1f58.css  main.209e1f58.css.map  main.5842b8f0.css  main.5842b8f0.css.map  main.65e5d4bd.css  main.65e5d4bd.css.map  main.83d8c241.css  main.83d8c241.css.map  main.88cc41fc.css  main.88cc41fc.css.map  main.af77147c.css  (+7 more)
(+111 files in other folders)
